# cargo_ice_repo_1

./: Cargo.toml
src/: lib.rs  main.rs
submod/: Cargo.toml
