[package]
name = "cargo_ice_repo_1"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["submod"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
submod2 = { git = "https://github.com/jmpesp/cargo_ice_repo_2", rev = "217359a" }
