[package]
name = "cargo_ice_repo_1"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["submod2"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
submod2 = { path = "submod2" }
binary = { git = "https://github.com/jmpesp/cargo_ice_repo_2", rev = "bae5a90" }
